Add classifier models with data preprocessing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ classifiers = [
 ]
 dependencies = [
     "setuptools",
+    "scikit-learn",
+    "pandas",
+    "matplotlib",
 ]
 
 [project.optional-dependencies]
